--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 
 /*Globales*/
 html{
-    font-size: 6.25%; /*1rem = 10px*/
+    font-size: 6.25%; /*1rem = 1px*/
     box-sizing: border-box;
     max-width: 1200rem;
     width: 90%;
@@ -56,21 +56,19 @@ p{
 
 a{
     font-size: 15rem;
+    padding: 2rem;
     text-decoration: none;
-    gap: 5rem;
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
+.header {                                               
     align-items: center;
-    gap: 12rem;
 }
 
-.navegacion__enlace{
-    text-align: center;
-    gap: 12rem;
+.navegacion{
+    float: right;
 }
+
+
 
 table, tr, td{
     font-size: 15rem;
