--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,14 @@ a{
     text-decoration: none;
 }
 
+/* Utilidades */
+
 .contenedor__centrado{
     max-width: 1400rem;
     width: 90%;
     margin: 0 auto;
 }
- 
+
 /* Header */
 .header {                                               
     background: url("../img/all_tools_red_out-focus.webp") no-repeat;
@@ -111,6 +113,7 @@ a{
     padding: 25rem;
     border-radius: 20rem;
     margin-top: -25rem;
+    margin-bottom: 15rem;
     box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
 }
 
@@ -120,8 +123,12 @@ a{
 
 /* Proyectos */
 table, tr, td{
+    margin-top: 10rem;
     font-size: 15rem;
+    border: 1rem solid var(--negro);
     border-collapse: collapse;
+    text-align: center;
+    caption-side: bottom;
 }
 
 
