--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,14 +59,23 @@ p{
     max-width: 1500rem;
     width: 93%;
     margin: 0 auto;
+    padding: 25rem;
+
 }
 
-/* Header  Inicio */
+
+/* Compartido */
+.contenedor__sombras{
+    background-color: var(--blanco);
+    margin-top: -70rem;
+    border-top-left-radius:  5rem;
+    border-top-right-radius:  5rem;
+    box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
+}
+
+/* Inicio */
 .header__inicio {                                               
-    /* background-color: #ea3e10;
-    width: 100%; */
     background: url("../img/all_tools_red_out-focus.webp") no-repeat;
-    background-position: top center;
     background-size: cover;
     height: 700rem; 
 }
@@ -74,40 +83,111 @@ p{
 .header__texto{
     color: var(--blanco);
     text-align: center;
-    position: absolute;
-    top: 250rem;
-    right: 30%;
+    margin-top: 150rem;
+    font-weight: 300;
 }
 
-/* Header Blog */
+.header__texto p{
+    font-size: 20rem;
+}
+
+/** Servicios **/
+.servicios__titulo{
+    text-align: center;
+}
+
+
+/* Proyectos */
+
+
+/* Contactos */
+
+.formulario{
+    max-width: 500rem;
+}
+
+
+/* Blog */
 .header__blog{
     background-color: var(--naranja);
-    height: 400rem;
+    width: 100%;
+    background-size: cover;
+    height: 450rem; 
 }
 
-/* Navegacion */
-/* .navegacion{
+.navegacion__fija{
     background: var(--blanco);
     width: 100%;
-    position: fixed;
-    opacity: 0.8;
+    position: relative;
     transition: .3s ease;
-} */
+}
+
+.redirecciones__enlaces{
+    display: flex;
+    justify-content: center;
+    gap: 30rem;
+}
+
+.redirecciones__enlaces a{
+    color: var(--negro);
+    background-color: var(--grisClaro);
+    font-size: 15rem;
+    text-decoration: none;
+    padding: 10rem;
+    border-radius: 10rem;
+}
+
+.redirecciones__enlaces a:hover{
+    color: var(--blanco);
+    background-color: var(--naranja);
+    box-shadow: 0px 0px 23px 8px rgba(0,0,0,0.75);
+    transition: 0.3s;
+}
+
+table, tr, td{
+    margin-top: 10rem;
+    font-size: 15rem;
+    border: 1rem solid var(--negro);
+    border-collapse: collapse;
+    text-align: center;
+    caption-side: bottom;
+}
+
+tr:nth-child(2n+1){
+    background-color: var(--blanco);
+}
+tr:nth-child(2n){
+    background-color: var(--gris);
+}
+tr:first-child{
+    background-color: var(--naranja);
+}
+
+
+/* Navegacion */
+.navegacion{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navegacion__enlaces{
+    display: flex;
+    gap: 30rem;
+    margin-right: 200rem;
+    margin-top: 20rem;
+
+}
 
 .navegacion__enlace{
-    float: right;
-    margin-top: 20rem;
-    padding-left: 20rem;
+    text-align: center;
     color: var(--blanco);
     font-size: 15rem;
     text-decoration: none;
 }
 
-
 .logo{
-    float: left;
     margin-left: 50rem;
-    margin-bottom: 10rem;
     color: var(--blanco);
     margin-top: 20rem;
     text-decoration: none;
@@ -121,60 +201,39 @@ p{
     font-weight: bold;
 }
 
-/* Servicios */
-.servicios{
-    background-color: var(--blanco);
-    padding: 25rem;
-    border-radius: 5rem;
-    margin-top: -70rem;
-    /* margin-bottom: 15rem; */
-    box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
-}
-
-.servicios__titulo{
-    text-align: center;
-}
-
-/* Proyectos */
-table, tr, td{
-    margin-top: 10rem;
-    font-size: 15rem;
-    border: 1rem solid var(--negro);
-    border-collapse: collapse;
-    text-align: center;
-    caption-side: bottom;
-}
-
-
-tr:nth-child(2n+1){
-    background-color: var(--blanco);
-}
-tr:nth-child(2n){
+/* Footer */
+footer{
+    color: var(--blanco);
     background-color: var(--gris);
+    bottom: 0rem;
+    height: 50rem;
+    padding: 25rem;
 }
-tr:first-child{
-    background-color: var(--naranja);
+
+.footer__enlaces a{
+    color: var(--blanco);
+    font-size: 15rem;
+    padding-right: 20rem;
+    text-decoration: none;
+}
+
+.footer__contenido{
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Alinear verticalmente */
+}
+
+.footer__texto {
+    display: block;
+    text-align: center;
+}
+
+.footer__redes{
+    display: flex;
+    gap: 25rem;
 }
 
 .redes-logo{
     width: 40rem;
     height: 40rem;
-}
-
-/* Contactos */
-.formulario{
-    max-width: 500rem;
-}
-
-
-/* Footer */
-footer{
-    color: var(--blanco);
-    background-color: var(--gris);
-    position: relative;
-    bottom: 0rem;
-}
-
-.footer p {
-    text-align: center;
 }
