--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap');
 
+/*
+transform:scale(0,1);
+*/
 :root{
     --rojoOscuro: #af161e;
     --rojo: #c8091b;
@@ -81,9 +84,11 @@ p{
 }
 
 .header__texto{
+    display: flex;
+    height: 400rem;
+    justify-content: center;
+    align-items: center;
     color: var(--blanco);
-    text-align: center;
-    margin-top: 150rem;
     font-weight: 300;
 }
 
@@ -116,10 +121,20 @@ p{
 }
 
 .navegacion__fija{
-    background: var(--blanco);
+    background-color: var(--blanco);
     width: 100%;
-    position: relative;
+    top: 0;
+    position: fixed;
     transition: .3s ease;
+}
+
+.navegacion__enlace__blog{
+    font-size: 20rem;
+    color: var(--negro);
+    display: flex;
+    gap: 30rem;
+    margin-right: 200rem;
+    margin-top: 20rem;
 }
 
 .redirecciones__enlaces{
@@ -176,7 +191,6 @@ tr:first-child{
     gap: 30rem;
     margin-right: 200rem;
     margin-top: 20rem;
-
 }
 
 .navegacion__enlace{
@@ -205,7 +219,7 @@ tr:first-child{
 footer{
     color: var(--blanco);
     background-color: var(--gris);
-    bottom: 0rem;
+    /* bottom: 0rem; */
     height: 50rem;
     padding: 25rem;
 }
