--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,9 @@ p{
 
 }
 
+.height__fijo{
+    height: 60rem;
+}
 
 /* Compartido */
 .contenedor__sombras{
@@ -74,6 +77,26 @@ p{
     border-top-left-radius:  5rem;
     border-top-right-radius:  5rem;
     box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
+}
+
+.navegacion__fija{
+    background-color: var(--blanco);
+    width: 100%;
+    top: 0;
+    position: fixed;
+    transition: .3s ease;
+}
+
+.navegacion__enlace__fijo{
+    font-size: 20rem;
+    color: var(--negro);
+    display: flex;
+    gap: 30rem;
+    margin-right: 200rem;
+    margin-top: 20rem;
+    text-align: center;
+    font-size: 15rem;
+    text-decoration: none;
 }
 
 /* Inicio */
@@ -91,6 +114,14 @@ p{
     color: var(--blanco);
     font-weight: 300;
 }
+
+/* .header__texto__titulo{
+    display: block;
+}
+
+.header__texto__texto{
+    display: block;
+} */
 
 .header__texto p{
     font-size: 20rem;
@@ -120,22 +151,7 @@ p{
     height: 450rem; 
 }
 
-.navegacion__fija{
-    background-color: var(--blanco);
-    width: 100%;
-    top: 0;
-    position: fixed;
-    transition: .3s ease;
-}
 
-.navegacion__enlace__blog{
-    font-size: 20rem;
-    color: var(--negro);
-    display: flex;
-    gap: 30rem;
-    margin-right: 200rem;
-    margin-top: 20rem;
-}
 
 .redirecciones__enlaces{
     display: flex;
@@ -184,6 +200,7 @@ tr:first-child{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 60rem;
 }
 
 .navegacion__enlaces{
