--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,10 +66,6 @@ p{
 
 }
 
-.height__fijo{
-    height: 60rem;
-}
-
 /* Compartido */
 .contenedor__sombras{
     background-color: var(--blanco);
@@ -79,25 +75,53 @@ p{
     box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
 }
 
-.navegacion__fija{
+
+/* Navegacion */
+.navegacion{
     background-color: var(--blanco);
-    width: 100%;
-    top: 0;
     position: fixed;
-    transition: .3s ease;
+    width: 100%;
+    height: 80rem;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px -7px 74px -3px rgba(0,0,0,1);
 }
 
-.navegacion__enlace__fijo{
-    font-size: 20rem;
+.height__fijo{
+    height: 80rem;
+}
+
+.logo{
+    margin-left: 50rem;
     color: var(--negro);
+    margin-top: 20rem;
+    text-decoration: none;
+}
+
+.logo__nombre{
+    font-weight: normal;
+}
+
+.logo__bold{
+    font-weight: bold;
+}
+
+.navegacion__enlaces{
     display: flex;
     gap: 30rem;
     margin-right: 200rem;
     margin-top: 20rem;
+}
+
+.navegacion__enlace{
+    color: var(--negro);
+    font-size: 18rem;
     text-align: center;
-    font-size: 15rem;
     text-decoration: none;
 }
+
 
 /* Inicio */
 .header__inicio {                                               
@@ -106,30 +130,19 @@ p{
     height: 700rem; 
 }
 
-.header__texto{
+.header__texto__inicio{
     display: flex;
-    height: 400rem;
+    height: 450rem;
     justify-content: center;
     align-items: center;
     color: var(--blanco);
     font-weight: 300;
 }
 
-/* .header__texto__titulo{
-    display: block;
-}
-
-.header__texto__texto{
-    display: block;
-} */
-
-.header__texto p{
-    font-size: 20rem;
-}
-
 /** Servicios **/
 .servicios__titulo{
     text-align: center;
+    
 }
 
 
@@ -137,9 +150,26 @@ p{
 
 
 /* Contactos */
-
 .formulario{
-    max-width: 500rem;
+    max-width: 800rem;
+    display: flex;
+}
+
+.formulario fieldset{
+    border: none;
+    font-size: 15rem;
+}
+
+.header__contacto frame{
+    z-index: 5;
+}
+
+.contacto{
+    background-color: var(--blanco);
+    padding-top: 15rem;
+    box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -151,7 +181,14 @@ p{
     height: 450rem; 
 }
 
-
+.header__texto__blog{
+    display: flex;
+    height: 200rem;
+    justify-content: center;
+    align-items: center;
+    color: var(--blanco);
+    font-weight: 300;
+}
 
 .redirecciones__enlaces{
     display: flex;
@@ -194,43 +231,13 @@ tr:first-child{
     background-color: var(--naranja);
 }
 
-
-/* Navegacion */
-.navegacion{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.whatsapp___fixed{
+    width: 60rem;
     height: 60rem;
+    position: fixed;
+    z-index: 3;
 }
 
-.navegacion__enlaces{
-    display: flex;
-    gap: 30rem;
-    margin-right: 200rem;
-    margin-top: 20rem;
-}
-
-.navegacion__enlace{
-    text-align: center;
-    color: var(--blanco);
-    font-size: 15rem;
-    text-decoration: none;
-}
-
-.logo{
-    margin-left: 50rem;
-    color: var(--blanco);
-    margin-top: 20rem;
-    text-decoration: none;
-}
-
-.logo__nombre{
-    font-weight: normal;
-}
-
-.logo__bold{
-    font-weight: bold;
-}
 
 /* Footer */
 footer{
