--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&family=Roboto:wght@300;400;700&display=swap');
 
-/*
-transform:scale(0,1);
-*/
 :root{
     --rojoOscuro: #af161e;
     --rojo: #c8091b;
@@ -133,6 +130,7 @@ p{
 .header__texto__inicio{
     display: flex;
     height: 450rem;
+    text-align: center;
     justify-content: center;
     align-items: center;
     color: var(--blanco);
@@ -150,30 +148,63 @@ p{
 
 
 /* Contactos */
-.formulario{
-    max-width: 800rem;
-    display: flex;
-}
-
-.formulario fieldset{
+/* .formulario fieldset{
     border: none;
     font-size: 15rem;
 }
 
 .formulario input , textarea{
     border: none;
+    border-bottom: 1rem solid var(--gris);
 }
 
+.formulario{
+    display: flex;
+    justify-content: space-between;
+}
 
 
 .contacto{
+    width: 100%;
     background-color: var(--blanco);
-    padding-top: 15rem;
     box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
     display: flex;
     justify-content: center;
+} */
+
+.contacto{
+    overflow: hidden; /*por si le ponemos floats*/
+    background-color: var(--blanco);
+    width: 100%;
 }
 
+form{
+    max-width: 800rem;
+    margin: 0 auto;
+    background-color: red;
+}
+
+.formulario__bloque1 .campo{
+    width: 50%;
+    float: left;
+    margin-bottom: 15rem;
+    margin-left: 5rem;
+}
+
+.formulario__bloque2 .campo{
+    margin-top: 15rem;
+}
+
+.campo{
+    width: 100%;
+    border: none;
+    border-bottom: 1rem solid var(--gris);
+    height: 45rem;
+}
+
+.campo__checkbox{
+    
+}
 
 /* Blog */
 .header__blog{
