--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 * {
     padding: 0rem;
     margin: 0rem;
+    overflow-x:hidden
 }
 
 html{
@@ -69,7 +70,8 @@ p{
     margin-top: -70rem;
     border-top-left-radius:  5rem;
     border-top-right-radius:  5rem;
-    box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81);
+    /* box-shadow: 0px 0px 23px 2px rgba(0,0,0,0.81); */
+    box-shadow: 0px 10px 15px 2px rgba(0,0,0,0.81);
 }
 
 
@@ -340,6 +342,12 @@ tr:first-child{
 
 .whatsapp___fixed:hover{
     transform: rotate(360deg);
+}
+
+@media (max-width: 768px) {
+    .whatsapp___fixed{
+        display: none;
+    }
 }
 
 
