--- a/assets/css/especialStyle.css
+++ b/assets/css/especialStyle.css
@@ -1,6 +1,10 @@
 @media print {
     header, footer, nav, aside {
         display: none; 
-    } 
+    }
+
+    .whatsapp___fixed{
+        display: none;
+    }
 
 }
